--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "oghliner": "^0.10.1"
+  },
+  "devDependencies": {
+    "gulp-concat": "^2.6.0",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^4.0.0",
+    "gulp-wrap": "^0.11.0",
+    "handlebars": "^4.0.4"
   }
 }
