--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
+    "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4"
