--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
+    "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4"
   }
