--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "oghliner": "^0.10.1"
   },
   "devDependencies": {
+    "css-mqpacker": "^4.0.0",
+    "csswring": "^4.0.0",
     "gulp-concat": "^2.6.0",
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
+    "gulp-postcss": "^6.0.1",
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4"
