add index to photographs add source maps add better debugging for when renderTemplate can't find the right div

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ node_modules/
 dist/
 app/scripts/handlebars-templates.js
 app/scripts/compressed.js
+app/scripts/compressed.js.map
 app/styles/bundle.css
