--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-postcss": "^6.0.1",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4"
