--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "oghliner": "^0.10.1"
   },
   "devDependencies": {
+    "browser-sync": "^2.10.0",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.0.0",
     "gulp-concat": "^2.6.0",
@@ -23,6 +24,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
-    "handlebars": "^4.0.4"
+    "handlebars": "^4.0.4",
+    "lodash.debounce": "^3.1.1"
   }
 }
