--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
+    "gulp-mocha": "^2.2.0",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
