--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ app/scripts/handlebars-templates.js
 app/scripts/compressed.js
 app/scripts/compressed.js.map
 app/styles/bundle.css
+app/test/ebird.json
