--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "oghliner": "^1.0.4"
@@ -22,6 +23,7 @@
     "gulp-eslint": "^1.1.0",
     "gulp-handlebars": "^4.0.0",
     "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.7",
     "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
