--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "babyparse": "^0.4.6",
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
