--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.13.4",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
+    "lunr": "^0.7.1",
     "oghliner": "^1.0.4"
   },
   "devDependencies": {
