--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "lunr": "^0.7.1",
-    "oghliner": "^1.0.4"
+    "oghliner": "^1.0.4",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "browser-sync": "^2.10.0",
