--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "gulp-connect": "^2.2.0",
     "lunr": "^0.7.1",
     "oghliner": "^1.0.4",
-    "winston": "^2.2.0"
-  },
-  "devDependencies": {
+    "winston": "^2.2.0",
     "browser-sync": "^2.10.0",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.0.0",
