--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
   },
   "scripts": {
     "start": "gulp serve"
-  },  
+  },
   "license": "Apache-2.0",
   "dependencies": {
     "babyparse": "^0.4.6",
-    "express": "^4.13.4",
-    "gulp": "^3.9.0",
-    "gulp-connect": "^2.2.0",
-    "lunr": "^0.7.1",
-    "oghliner": "^1.0.4",
-    "winston": "^2.2.0",
     "browser-sync": "^2.10.0",
+    "compression": "^1.6.2",
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.0.0",
+    "expires-middleware": "0.0.1",
+    "express": "^4.13.4",
+    "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.2.0",
     "gulp-convert": "^0.2.0",
     "gulp-declare": "^0.3.0",
     "gulp-eslint": "^1.1.0",
@@ -33,6 +32,9 @@
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4",
-    "lodash.debounce": "^4.0.0"
+    "lodash.debounce": "^4.0.0",
+    "lunr": "^0.7.1",
+    "oghliner": "^1.0.4",
+    "winston": "^2.2.0"
   }
 }
