--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.4",
+    "iso-3166-2": "^0.4.0",
     "lodash.debounce": "^4.0.0",
     "lunr": "^0.7.1",
     "oghliner": "^1.0.4",
