move D3.js to an npm package, remove from this codebase

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules/
 dist/
 app/scripts/handlebars-templates.js
 app/scripts/handlebars.js
+app/scripts/d3.js
 app/scripts/compressed.js
 app/scripts/compressed.js.map
 app/styles/bundle.css
