--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "babyparse": "^0.4.6",
+    "bootstrap": "^3.3.7",
     "browser-sync": "^2.10.0",
     "c3": "^0.4.11",
     "compression": "^1.6.2",
@@ -35,6 +36,7 @@
     "gulp-wrap": "^0.11.0",
     "handlebars": "^4.0.5",
     "iso-3166-2": "^0.4.0",
+    "jquery": "^3.1.1",
     "lodash.debounce": "^4.0.0",
     "lunr": "^0.7.1",
     "oghliner": "^1.0.4",
