--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "css-mqpacker": "^4.0.0",
     "csswring": "^4.0.0",
     "d3": "~3.5.6",
+    "exif": "^0.6.0",
     "expires-middleware": "0.0.1",
     "express": "^4.13.4",
+    "glob": "^7.1.1",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
@@ -39,7 +41,9 @@
     "jquery": "^3.1.1",
     "lodash.debounce": "^4.0.0",
     "lunr": "^0.7.1",
+    "node-iptc": "^1.0.4",
     "oghliner": "^1.0.4",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "xml2js": "^0.4.17"
   }
 }
