--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "url": "git@github.com:wfwalker/ebird-mybird.git"
   },
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node server/server.js",
+    "test": "mocha"
   },
   "license": "Apache-2.0",
   "dependencies": {
@@ -20,6 +21,7 @@
     "iso-3166-2": "^0.4.0",
     "jquery": "^3.1.1",
     "lunr": "^0.7.1",
+    "mocha": "^3.4.0",
     "moment": "^2.18.1",
     "request": "^2.81.0",
     "winston": "^2.2.0"
