--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ebird-mybird",
-  "version": "0.1.0",
+  "version": "4.0",
   "description": "An offline web app for browsing your personal eBird sightings",
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
     "moment": "^2.18.1",
     "request": "^2.81.0",
     "winston": "^2.2.0"
+  },
+  "engines": {
+    "node": "7.2.1"
   }
 }
