--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
   },
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "eslint server/server.js server/*.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "babyparse": "^0.4.6",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
+    "eslint": "^3.19.0",
     "expires-middleware": "0.0.1",
     "express": "^4.13.4",
     "handlebars": "^4.0.8",
@@ -31,6 +33,12 @@
     "npm": "3.10.9"
   },
   "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.4.1"
   }
 }
