--- a/package.json
+++ b/package.json
@@ -19,13 +19,18 @@
     "eslint": "^3.19.0",
     "expires-middleware": "0.0.1",
     "express": "^4.13.4",
+    "express-react-views": "^0.10.2",
     "handlebars": "^4.0.8",
     "iso-3166-2": "^0.4.0",
     "jquery": "^3.1.1",
     "mocha": "^3.4.0",
     "moment": "^2.18.1",
+    "node-iptc": "^1.0.4",
+    "react": "^15.6.0",
+    "react-dom": "^15.6.0",
     "request": "^2.81.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "xml2js": "^0.4.17"
   },
   "engines": {
     "node": "7.2.1",
