--- a/package.json
+++ b/package.json
@@ -16,27 +16,24 @@
     "babyparse": "^0.4.6",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
-    "eslint": "^3.19.0",
     "expires-middleware": "0.0.1",
     "express": "^4.13.4",
     "express-react-views": "^0.10.2",
-    "handlebars": "^4.0.8",
     "iso-3166-2": "^0.4.0",
     "jquery": "^3.1.1",
-    "mocha": "^3.4.0",
     "moment": "^2.18.1",
-    "node-iptc": "^1.0.4",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "request": "^2.81.0",
-    "winston": "^2.2.0",
-    "xml2js": "^0.4.17"
+    "winston": "^2.2.0"
   },
   "engines": {
     "node": "7.2.1",
     "npm": "3.10.9"
   },
   "devDependencies": {
+    "xml2js": "^0.4.17",
+    "node-iptc": "^1.0.4",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.2.0",
