--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "iso-3166-2": "^0.4.0",
     "jquery": "^3.1.1",
     "moment": "^2.18.1",
+    "pixl-xml": "^1.0.13",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "request": "^2.81.0",
