--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^3.4.2",
-    "node-iptc": "^1.0.4",
-    "xml2js": "^0.4.17"
+    "node-iptc": "^1.0.4"
   }
 }
