--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ebird-mybird",
   "version": "0.1.0",
-  "description": "An offline web app for browsing your personal eBird sightings",
+  "description": "A web site for browsing your personal eBird sightings",
   "repository": {
     "type": "git",
     "url": "git@github.com:wfwalker/ebird-mybird.git"
@@ -13,6 +13,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "aframe": "^0.7.1",
     "babyparse": "^0.4.6",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
