--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
     "url": "git@github.com:wfwalker/ebird-mybird.git"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "GOOGLE_MAPS_API_KEY=AIzaSyB4y5UuNoZMXzc3NXzCgYn8usH1gLFA3b4 node server/server.js",
     "test": "mocha",
     "lint": "eslint server/scripts/application.js server/scripts/sightinglist.js server/server.js test/test.js"
   },
   "license": "Apache-2.0",
   "dependencies": {
     "aframe": "^0.7.1",
-    "babyparse": "^0.4.6",
     "bootstrap": "^3.3.7",
     "compression": "^1.6.2",
     "expires-middleware": "0.0.1",
@@ -23,6 +22,7 @@
     "iso-3166-2": "^0.4.0",
     "jquery": "^3.1.1",
     "moment": "^2.18.1",
+    "papaparse": "^5.0.2",
     "pixl-xml": "^1.0.13",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
